test/Syntax2.err
3: syntax error: missing ')' ?
	print (2 + 4
	            ^
