test/Syntax2.logo
# negative syntax test 2: ( without )

print (2 + 4